syntax.output
State 71 conflicts: 1 shift/reduce
State 72 conflicts: 1 shift/reduce
State 105 conflicts: 1 shift/reduce
State 106 conflicts: 10 shift/reduce
State 107 conflicts: 1 shift/reduce
State 108 conflicts: 1 shift/reduce
State 109 conflicts: 1 shift/reduce
State 110 conflicts: 1 shift/reduce
State 111 conflicts: 1 shift/reduce
State 112 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | %empty

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP
   21       | error RP

   22 VarList: ParamDec COMMA VarList
   23        | ParamDec

   24 ParamDec: Specifier VarDec

   25 CompSt: LC DefList StmtList RC
   26       | error RC

   27 StmtList: Stmt StmtList
   28         | %empty

   29 Stmt: Exp SEMI
   30     | CompSt
   31     | RETURN Exp SEMI
   32     | IF LP Exp RP Stmt
   33     | IF LP Exp RP Stmt ELSE Stmt
   34     | WHILE LP Exp RP Stmt
   35     | RETURN error SEMI
   36     | error SEMI

   37 DefList: Def DefList
   38        | %empty

   39 Def: Specifier DecList SEMI
   40    | Specifier DecList error

   41 DecList: Dec
   42        | Dec COMMA DecList

   43 Dec: VarDec
   44    | VarDec ASSIGNOP Exp

   45 Exp: Exp ASSIGNOP Exp
   46    | Exp AND Exp
   47    | Exp OR Exp
   48    | Exp RELOP Exp
   49    | Exp PLUS Exp
   50    | Exp MINUS Exp
   51    | Exp STAR Exp
   52    | Exp DIV Exp
   53    | LP Exp RP
   54    | MINUS Exp
   55    | NOT Exp
   56    | ID LP Args RP
   57    | ID LP RP
   58    | Exp LB Exp RB
   59    | Exp DOT ID
   60    | ID
   61    | INT
   62    | FLOAT
   63    | LP error RP
   64    | ID LP error RP
   65    | Exp LB error RB

   66 Args: Exp COMMA Args
   67     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 21 26 35 36 40 63 64 65
SEMI (258) 4 5 7 29 31 35 36 39
COMMA (259) 9 22 42 66
ASSIGNOP (260) 44 45
RELOP (261) 48
PLUS (262) 49
MINUS (263) 50 54
STAR (264) 51
DIV (265) 52
AND (266) 46
OR (267) 47
NOT (268) 55
DOT (269) 59
TYPE (270) 10
LP (271) 19 20 32 33 34 53 56 57 63 64
RP (272) 19 20 21 32 33 34 53 56 57 63 64
LB (273) 18 58 65
RB (274) 18 58 65
LC (275) 12 25
RC (276) 12 25 26
STRUCT (277) 12 13
RETURN (278) 31 35
IF (279) 32 33
ELSE (280) 33
WHILE (281) 34
INT (282) 18 61
FLOAT (283) 62
ID (284) 14 16 17 19 20 56 57 59 60 64
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7, on right: 2
ExtDecList (35)
    on left: 8 9, on right: 4 9
Specifier (36)
    on left: 10 11, on right: 4 5 6 24 39 40
StructSpecifier (37)
    on left: 12 13, on right: 11
OptTag (38)
    on left: 14 15, on right: 12
Tag (39)
    on left: 16, on right: 13
VarDec (40)
    on left: 17 18, on right: 8 9 18 24 43 44
FunDec (41)
    on left: 19 20 21, on right: 6
VarList (42)
    on left: 22 23, on right: 19 22
ParamDec (43)
    on left: 24, on right: 22 23
CompSt (44)
    on left: 25 26, on right: 6 30
StmtList (45)
    on left: 27 28, on right: 25 27
Stmt (46)
    on left: 29 30 31 32 33 34 35 36, on right: 27 32 33 34
DefList (47)
    on left: 37 38, on right: 12 25 37
Def (48)
    on left: 39 40, on right: 37
DecList (49)
    on left: 41 42, on right: 39 40 42
Dec (50)
    on left: 43 44, on right: 41 42
Exp (51)
    on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63 64 65, on right: 29 31 32 33 34 44 45 46 47 48 49 50 51 52 53
    54 55 58 59 65 66 67
Args (52)
    on left: 66 67, on right: 56 66


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 3

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    error  shift, and go to state 15
    SEMI   shift, and go to state 16
    ID     shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 11

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

   21 FunDec: error . RP

    RP  shift, and go to state 22


State 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 17

   17 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 17 (VarDec)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 19

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 8 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 27
    LC     shift, and go to state 28

    CompSt  go to state 29


State 21

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 38 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 31
    Def              go to state 32


State 22

   21 FunDec: error RP .

    $default  reduce using rule 21 (FunDec)


State 23

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 33
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 35
    ParamDec         go to state 36


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 37

    ExtDecList  go to state 38
    VarDec      go to state 19


State 26

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 39


State 27

   26 CompSt: error . RC

    RC  shift, and go to state 40


State 28

   25 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 38 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 41
    Def              go to state 32


State 29

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 30

   39 Def: Specifier . DecList SEMI
   40    | Specifier . DecList error

    ID  shift, and go to state 37

    VarDec   go to state 42
    DecList  go to state 43
    Dec      go to state 44


State 31

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 45


State 32

   37 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 38 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 46
    Def              go to state 32


State 33

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


State 34

   24 ParamDec: Specifier . VarDec

    ID  shift, and go to state 37

    VarDec  go to state 47


State 35

   19 FunDec: ID LP VarList . RP

    RP  shift, and go to state 48


State 36

   22 VarList: ParamDec . COMMA VarList
   23        | ParamDec .

    COMMA  shift, and go to state 49

    $default  reduce using rule 23 (VarList)


State 37

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 38

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 39

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 50


State 40

   26 CompSt: error RC .

    $default  reduce using rule 26 (CompSt)


State 41

   25 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    LP      shift, and go to state 54
    LC      shift, and go to state 28
    RETURN  shift, and go to state 55
    IF      shift, and go to state 56
    WHILE   shift, and go to state 57
    INT     shift, and go to state 58
    FLOAT   shift, and go to state 59
    ID      shift, and go to state 60

    RC  reduce using rule 28 (StmtList)

    CompSt    go to state 61
    StmtList  go to state 62
    Stmt      go to state 63
    Exp       go to state 64


State 42

   18 VarDec: VarDec . LB INT RB
   43 Dec: VarDec .
   44    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 65
    LB        shift, and go to state 26

    $default  reduce using rule 43 (Dec)


State 43

   39 Def: Specifier DecList . SEMI
   40    | Specifier DecList . error

    error  shift, and go to state 66
    SEMI   shift, and go to state 67


State 44

   41 DecList: Dec .
   42        | Dec . COMMA DecList

    COMMA  shift, and go to state 68

    $default  reduce using rule 41 (DecList)


State 45

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 46

   37 DefList: Def DefList .

    $default  reduce using rule 37 (DefList)


State 47

   18 VarDec: VarDec . LB INT RB
   24 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 24 (ParamDec)


State 48

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


State 49

   22 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 69
    ParamDec         go to state 36


State 50

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 51

   26 CompSt: error . RC
   36 Stmt: error . SEMI

    SEMI  shift, and go to state 70
    RC    shift, and go to state 40


State 52

   54 Exp: MINUS . Exp

    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60

    Exp  go to state 71


State 53

   55 Exp: NOT . Exp

    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60

    Exp  go to state 72


State 54

   53 Exp: LP . Exp RP
   63    | LP . error RP

    error  shift, and go to state 73
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60

    Exp  go to state 74


State 55

   31 Stmt: RETURN . Exp SEMI
   35     | RETURN . error SEMI

    error  shift, and go to state 75
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60

    Exp  go to state 76


State 56

   32 Stmt: IF . LP Exp RP Stmt
   33     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 77


State 57

   34 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 78


State 58

   61 Exp: INT .

    $default  reduce using rule 61 (Exp)


State 59

   62 Exp: FLOAT .

    $default  reduce using rule 62 (Exp)


State 60

   56 Exp: ID . LP Args RP
   57    | ID . LP RP
   60    | ID .
   64    | ID . LP error RP

    LP  shift, and go to state 79

    $default  reduce using rule 60 (Exp)


State 61

   30 Stmt: CompSt .

    $default  reduce using rule 30 (Stmt)


State 62

   25 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 80


State 63

   27 StmtList: Stmt . StmtList

    error   shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    LP      shift, and go to state 54
    LC      shift, and go to state 28
    RETURN  shift, and go to state 55
    IF      shift, and go to state 56
    WHILE   shift, and go to state 57
    INT     shift, and go to state 58
    FLOAT   shift, and go to state 59
    ID      shift, and go to state 60

    RC  reduce using rule 28 (StmtList)
